# 381706-1Golubeva_AllLab

./: .travis.yml  ArrayList_report.docx  CMakeLists.txt  List_report.docx  Matrix_report.docx  MultiStack_report.docx  Polish.docx  Polynomial.docx  Queue.docx  README.md  Stack.docx  StackList_report.docx
ArrayList/: ArrayList_main.cpp
ArrayListLib/: ArrayList.h
ArrayListTests/: ArrayList_Test.cpp
Exception/: CMakeLists.txt  Exception.h
List/: main_List.cpp
ListLib/: Elem.h  List.cpp  List.h
ListTest/: test_List.cpp
Matrix/: main_matrix.cpp
MatrixLib/: MatrixLib.cpp  MatrixLib.h
MatrixTest/: test.cpp
MultiStack/: CMakeLists.txt  main.cpp
MultiStackLib/: CMakeLists.txt  MultiStack.h  NewStack.h
MultiStackTest/: MultiStackTest.cpp
Polish/: Polish_main.cpp
PolishLib/: Polish.cpp  Polish.h
PolishTest/: PolishTest.cpp
Polynomial/: CMakeLists.txt  Polynomial_main.cpp
PolynomialLib/: CMakeLists.txt  Monomial.cpp  Monomial.h  Polynomial.cpp  Polynomial.h
PolynomialTest/: PolynomialTest.cpp
Queue/: main.cpp
QueueLib/: Queue.h
QueueTest/: CMakeLists.txt  test.cpp  test_main.cpp
Stack/: main.cpp
StackLib/: Stack.h
StackList/: StackLIst_main.cpp  StackList_main.cpp
StackListLib/: StackList.h
StackListTest/: StackList_Test.cpp
StackTest/: test.cpp  test_main.cpp
Table/: CMakeLists.txt  Table_main.cpp
TableLib/: CMakeLists.txt  TElem.cpp  TElem.h  TTable.h
TableTest/: CMakeLists.txt  TableTest.cpp
Vector/: CMakeLists.txt  main.cpp
VectorLib/: CMakeLists.txt  VectorLib.cpp  VectorLib.h
VectorTest/: test.cpp  test_main.cpp
